[gd_scene load_steps=12 format=2]

[ext_resource path="res://Background/background.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Candy Beans.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/SummaryReport/Panel.gd" type="Script" id=3]
[ext_resource path="res://Images/bg.png" type="Texture" id=4]
[ext_resource path="res://Assets/Quiz/medium.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=2]

[sub_resource type="DynamicFont" id=3]
size = 270
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 240
font_data = ExtResource( 2 )

[sub_resource type="StreamTexture" id=9]
flags = 4
load_path = "res://.import/medium.png-7d89abb839e6324438c651b738b16588.stex"

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 2 )

[node name="Node" type="Node"]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 290.722, 511.707 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 127.737
margin_top = 50.4211
margin_right = 546.737
margin_bottom = 133.421
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mrs Tan, Adriana"
valign = 1
uppercase = true

[node name="Panel" type="Panel" parent="."]
editor/display_folded = true
margin_top = 40.0
margin_right = 535.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="Board" type="Sprite" parent="Panel"]
position = Vector2( 304.61, 386.343 )
scale = Vector2( 0.566147, 0.693414 )
texture = ExtResource( 4 )

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/Board"]
margin_left = -405.0
margin_top = -383.0
margin_right = 392.0
margin_bottom = 366.0

[node name="list" type="VBoxContainer" parent="Panel/Board/ScrollContainer"]

[node name="HTTPRequest2" type="HTTPRequest" parent="Panel/Board"]

[node name="HTTPRequest" type="HTTPRequest" parent="Panel"]

[node name="Sprite" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 150.517, 773.039 )
scale = Vector2( 0.112056, 0.0937038 )
texture = ExtResource( 5 )

[node name="Button" type="Button" parent="Sprite"]
margin_left = -990.365
margin_top = -394.445
margin_right = 1076.64
margin_bottom = 418.555
custom_styles/normal = SubResource( 2 )
flat = true

[node name="Label" type="Label" parent="Sprite"]
margin_left = -1024.09
margin_top = -298.344
margin_right = 960.914
margin_bottom = 213.656
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "+ Assignments"
align = 1
valign = 1

[node name="Sprite2" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 425.296, 773.266 )
scale = Vector2( 0.112, 0.094 )
texture = ExtResource( 5 )

[node name="ReportButton" type="Button" parent="Sprite2"]
margin_left = -1083.04
margin_top = -409.464
margin_right = 983.958
margin_bottom = 403.536
flat = true

[node name="Label" type="Label" parent="Sprite2"]
margin_left = -922.587
margin_top = -198.234
margin_right = 1120.41
margin_bottom = 155.766
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Summary Report"

[node name="BButton" type="TextureButton" parent="."]
margin_left = 6.0
margin_top = 10.0
margin_right = 143.0
margin_bottom = 56.0
texture_normal = SubResource( 9 )
expand = true

[node name="Label2" type="Label" parent="BButton"]
margin_left = 19.5364
margin_top = 9.30424
margin_right = 122.536
margin_bottom = 49.3042
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Log Out"
align = 1
[connection signal="request_completed" from="Panel/HTTPRequest" to="Panel" method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="Sprite/Button" to="Panel" method="_on_Button_pressed"]
[connection signal="pressed" from="Sprite2/ReportButton" to="Panel" method="_on_ReportButton_pressed"]
[connection signal="pressed" from="BButton" to="Panel" method="_on_BButton_pressed"]
